# swagger/swagger.json
@@ -343,6 +343,27 @@
           }
         }
       }
+    },
+    "/get_questions": {
+      "get": {
+        "description": "In this send authorization token follow with Bearer i.e (Bearer token)",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "required": true,
+            "description": "In this send authorization token follow with Bearer i.e (Bearer token)"
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "question list"
+          }
+        }
+      }
     }
   },
   "definitions": {
